flux/apps/base/abrabus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: abrabus
  namespace: abrabus
spec:
  selector:
    app: abrabus
  ports:
    - name: http
      port: 6011
      targetPort: http
